@@ -36,6 +36,8 @@ Version 1.7.5
        handle redirects properly. (Stefan)
 - BUG: Issue #210: blame "ignore all whitespaces"
        uses -b instead of -w. (Stefan)
+- BUG: Issue #211: Properties dialog only
+       shows files menu items. (Stefan)
 
 Version 1.7.4
 - BUG: Issue #169: Error "Access to 
